# strip_cargo_version

./: Cargo.toml  README.md
src/: cargo_lock.rs  cargo_toml.rs  main.rs
